@@ -1,5 +1,7 @@
 ;Exomizer 2 Z80 decoder
-; by Metalbrain
+; by Metalbrain 
+;
+; optimized by Antonio Villena
 ;
 ; compression algorithm by Magnus Lind
 
@@ -8,30 +10,27 @@
 ;
 ;		you may change exo_mapbasebits to point to any free buffer
 
-deexo:		ld	a,(hl)
-		inc	hl
-		ld	ixh,a
-
-		ld	b,52
-		ld	iy,exo_mapbasebits
-		push	de
-exo_initbits:	ld	a,b
+deexo:		ld	iy, exo_mapbasebits
+		ld	a, (hl)
+      		inc	hl
+      		ld	b, 52
+      		push	de
+exo_initbits:	ex	af, af'
+		ld	a,b
 		sub	4
 		and	15
 		jr	nz,exo_node1
-
 		ld	de,1		;DE=b2
 exo_node1:	ld	c,16
-exo_gett4bits:	call	exo_getbit
+		ex	af, af'
+exo_get4bits:	call	exo_getbit
 		rl	c
 		jr	nc,exo_get4bits
 		ld	(iy+0),c	;bits[i]=b1
-
 		push	hl
-		inc	c
-		ld	hl,0
-		scf
-exo_setbit:	adc	hl,hl
+		ld	hl, 1
+		defb	210		;3 bytes nop (JP NC)
+exo_setbit:	add	hl,hl
 		dec	c
 		jr	nz,exo_setbit
 		ld	(iy+52),e
@@ -39,11 +38,11 @@ exo_setbit:	adc	hl,hl
 		add	hl,de
 		ex	de,hl
 		inc	iy
-
 		pop	hl
 		djnz	exo_initbits
 		pop	de
-
+      		db	218		;3 bytes nop (JP C) --> jr exo_mainloop
+exo_literalcopy:ldir
 exo_mainloop:	ld	c,1		;lenght=1
 		call	exo_getbit	;literal?
 		jr	c,exo_literalcopy
@@ -52,40 +51,42 @@ exo_getindex:	inc	c
 		call	exo_getbit
 		jr	nc,exo_getindex
 		ld	a,c		;C=index
-		cp	16
-		ret	z
-		jr	c,exo_continue
+		bit	4, c
+      		jr	z, exo_continue
+      		bit	0, c
+      		ret	z
 		push	de
 		ld	d,16
 		call	exo_getbits
 		pop	de
-exo_literalcopy:ldir
-		jr	exo_mainloop
+		jr	exo_literalcopy
 exo_continue:	push	de
 		call	exo_getpair
-		ld	(exo_lenght+1),bc ;Store lenght
+		push	bc
+		pop	ix
 		ld	de,512+48	;2 bits, 48 offset
-		dec	bc
-		ld	a,b
-		or	c
-		jr	z,exo_goforit	;1?
-		ld	de,1024+32	;4 bits, 32 offset
-		dec	bc
-		ld	a,b
-		or	c
-		jr	z,exo_goforit	;2?
+		inc	b
+		djnz	exo_dontgo
+		dec	c
+		jr	z, exo_goforit
+		dec	c		;2?
+exo_dontgo:	ld	de,1024+32	;4 bits, 32 offset
+		jr	z,exo_goforit
 		ld	e,16		;16 offset
 exo_goforit:	call	exo_getbits
+		ex	af, af'
 		ld	a,e
 		add	a,c
 		ld	c,a
+		ex	af, af'
 		call	exo_getpair
 		pop	de		;bc=offset
 		push	hl		;de=destination
 		ld	h,d
 		ld	l,e
 		sbc	hl,bc		;hl=origin
-exo_lenght:	ld	bc,0		;bc=lenght
+		push	ix
+		pop	bc		;bc=lenght
 		ldir
 		pop	hl		;Keep HL, DE is updated
 		jr	exo_mainloop	;Next!
@@ -93,17 +94,18 @@ exo_lenght:	ld	bc,0		;bc=lenght
 exo_getpair:	ld	iy,exo_mapbasebits
 		ld	b,0
 		add	iy,bc
-		ld	d,[iy+0]
+		ld	d,(iy+0)
 		call	exo_getbits
-		ld	a,c
-		add	a,[iy+52]
-		ld	c,a
-		ld	a,b
-		adc	a,[iy+104]
-		ld	b,a
+		push	hl
+		ld	l,(iy+52)
+		ld	h,(iy+104)
+		add	hl, bc		;Always clear C flag
+      		ld	b, h
+      		ld	c, l
+		pop	hl
 		ret
 
-exo_getbits:	ld	bc,0
+exo_getbits:	ld	bc,0		;get D bits in BC
 exo_gettingbits:dec	d
 		ret	m
 		call	exo_getbit
@@ -111,14 +113,11 @@ exo_gettingbits:dec	d
 		rl	b
 		jr	exo_gettingbits
 
-exo_getbit:	ld	a,ixh
-		srl	a
-		ld	ixh,a
+exo_getbit:	srl	a		;get one bit
 		ret	nz
-		ld	a,(hl)
+		ld	a, (hl)
 		inc	hl
 		rra
-		ld	ixh,a
 		ret
 
 exo_mapbasebits:defs	156	;tables for bits, baseL, baseH
